fixed broken css

--- a/trunk/htdocs/core/css/templates/ps/headings.css
+++ b/trunk/htdocs/core/css/templates/ps/headings.css
@@ -34,7 +34,7 @@ h3.emboldened, #landing #main h3 { position: relative; color: #8e0018; border-bo
 #rhs h3 {  background: url(/core/gfx/templates/ps/bars-120724.png) 0 bottom; border-bottom: 1px solid #ccc; }
 .callout h2 { color: #fff; }
 
-h4, h5 { margin: 8px 0; margin: 0 10px; font-size: 1em; }
+h4, h5 { margin: 8px 10px; font-size: 1em; }
 
 h6 { font-size: 2em; background-color: #f99; color: #900; padding: 1em; }
 
